2002-04-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (g_mime_utils_base64_decode_step): Only backtrack
	if we have output data.

2002-04-23  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (rfc2047_encode_phrase): Fixed a small memory
	leak. Thanks to the Pan guys for finding this.

2002-04-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_step_from): Fixes to make it work.
	(g_mime_parser_eos): New function to tell if a parser is at the
	end of it's stream.

2002-04-20  Jeffrey Stedfast  <fejj@ximian.com>

	* docs/*: Updated.

	* configure.in: Add $srcdir to the include path so it catches
	iconv-detect.h.

2002-04-18  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_step_headers): Take advantage of the same
	optimization as parser_scan_content.

2002-04-17  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_scan_content): Optimized by a good 15% by
	simply changing my inner while-loop. See comment for explanation.

	* gmime-part.c (g_mime_part_encoding_from_string): Added support
	for the binary encoding.
	(g_mime_part_encoding_to_string): Same.

	* gmime-utils.h: Added GMIME_PART_ENCODING_BINARY.

2002-04-17  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_scan_multipart_subparts): Don't leak
	objects!

2002-04-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-message.c (process_header): process the headers we care
	about.
	(message_add_header): Call process_header.
	(message_set_header): Same.

	* gmime-part.c (process_header): process the headers we care
	about.
	(mime_part_add_header): Call process_header.
	(mime_part_set_header): Same.

	* gmime-object (process_header): process the headers we care
	about.
	(add_header): Call process_header.
	(set_header): Same.

2002-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (g_mime_parser_set_scan_from): New accessor
	method to set whether or not to scan from-lines.
	(g_mime_parser_get_scan_from): New accessor method to get the